Chapter1/fileserverDeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fileserver
  labels:
    app: fileserver
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fileserver
  template:
    metadata:
      labels:
        app: fileserver
    spec:
      containers:
      - name: fileserver
        image: matinz626/static-files:v1-abcde
        imagePullPolicy: Always
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        resources: 
          limits:
            memory: "128Mi"
            cpu: "500m"
      dnsPolicy: ClusterFirst
      restartPolicy: Always
