Chapter1/headless_rediswrite.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-write
  labels:
    app: redis-write
spec:
  selector:
    app: redis
  ports:
  - port: 6379
  clusterIP: None
